# clm_ros_wrapper

./: .gitignore  CMakeLists.txt  README.md  package.xml  run_sar_perception.sh
launch/: clm_ros_wrapper.launch  clm_ros_wrapper_record.launch  face_recognition_initializer.launch  face_recognition_predict.launch  face_recognition_tester.launch  face_recognition_train_predict.launch  face_recognition_two_faces_assessment.launch  face_recognition_two_faces_assessment_dad.launch  face_recognition_two_faces_assessment_mom.launch  single_face_recognition_assessment.launch  test_2_cam.launch
lib/local/CLM/: CMakeLists.txt
lib/local/CLM/src/: CLM_utils.cpp
lib/local/FaceAnalyser/: CMakeLists.txt
lib/local/FaceAnalyser/include/: GazeEstimation.h
lib/local/FaceAnalyser/src/: GazeEstimation.cpp
msg/: Assessment.msg  ClmEyeGaze.msg  ClmEyeGazes.msg  ClmFacialActionUnit.msg  ClmHead.msg  ClmHeadPose.msg  ClmHeadVectors.msg  ClmHeads.msg  DetectedTarget.msg  DetectedTargets.msg  FreeObject.msg  GazeDirection.msg  GazeDirections.msg  GazePointAndDirection.msg  GazePointsAndDirections.msg  Object.msg  ObjectsOnPlane.msg  Scene.msg  Screen.msg  VectorWithCertainty.msg  VectorsWithCertainty.msg  VectorsWithCertaintyWithGazePointsAndDirections.msg
src/: CLMWrapper.cpp  CLMWrapper.h  FindGazePoint.cpp  RegionDetecter.cpp  clm_bridge.cpp  clm_ros_wrapper.cpp  clm_ros_wrapper_backup.cpp  scene_publisher.cpp  subscriber.cpp
src/clm_ros_wrapper/: CLMWrapper.cpp  CLMWrapper.h  clm_ros_wrapper.cpp
src/face_recognition_initializer/: FaceRecognizeInitiallizer.cpp  FaceRecognizeTester.cpp  InitializerHelper.cpp  InitializerHelper.h  TesterHelper.cpp  TesterHelper.h  readme.txt
src/find_gazepoint/: FindGazePoint.cpp
src/region_detector/: RegionDetector.cpp
src/target_detector/: TargetDetector.cpp  TargetDetector.msg  find_screen_coordinate.py
